<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserInfoActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="25sp"
        android:layout_marginBottom="25sp"
        android:text="@string/user_information"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25sp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/shape"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/bodyShapeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:entries="@array/user_shape_des" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/heightTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/birthday_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/birthday_value"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/user_gender_grp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/male_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/male" />

            <RadioButton
                android:id="@+id/female_rb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/female" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25sp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView10"
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:text="@string/clothes_weight"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/editText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/enter_extra_weight"
            android:inputType="number"
            android:importantForAutofill="no" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/user_info_confirm_btn"
        style="@style/Widget.MaterialComponents.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="25sp"
        android:text="@string/confirm"
        android:textSize="18sp" />
</LinearLayout>