<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/administrator_male" />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginRight="25sp"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/enter_username"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginRight="25sp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/userInfoConfirmBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15sp"
            android:background="#B2DFDB"
            android:text="@string/continue_button" />

    </LinearLayout>
</LinearLayout>